--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "homepage": "https://alexgithubbb.github.io/GithubFinder_React/",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "npm run build && gh-pages -d build"
